# build-small-moe-lm

./: .gitignore  README.md  common.py  dashboard_assets.py  finetune.py  generate.py  inspect_model.py  inspect_tokenizer.py  model.py  prepare_data.py  prepare_instruct_data.py  pyproject.toml  train.py
