[project]
name = "build-small-moe-lm"
version = "0.1.0"
description = "Small MoE language model trained from scratch with MLX"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.18.0",
    "mlx-lm>=0.19.0",
    "numpy",
    "tokenizers>=0.20.0",
    "datasets>=2.20.0",
    "tqdm",
]

[dependency-groups]
dev = [
    "pylint>=3.2.0",
]

[tool.pylint.main]
extension-pkg-allow-list = ["mlx"]

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",   # each script already has a usage docstring up top
    "too-few-public-methods",     # nn.Module subclasses routinely have just __init__/__call__
    "too-many-instance-attributes",  # model config / layer classes naturally hold many hyperparams
]

[tool.pylint.format]
max-line-length = 110

[tool.pylint.design]
max-locals = 30
max-statements = 70
max-args = 8

[tool.pylint.basic]
good-names = ["B", "T", "D", "N", "i", "j", "k", "e", "f", "ex", "_"]

[tool.pylint."similarities"]
min-similarity-lines = 12
ignore-imports = true